k8s/pinponfel/grafana/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls: 
  - hosts:
    - grafana.felagonell.com
    secretName: grafana-tls-secret
  rules:
  - host: grafana.felagonell.com
    http:
      paths:
      - backend:
          serviceName: grafana-svc
          servicePort: 3000
        path: /
